--- a/web/style.css
+++ b/web/style.css
@@ -10,6 +10,12 @@ body {
   font-style: normal;
 }
 
+p{
+  font-size: 15px;
+  color: #4e3232;
+  font-family: monospace;
+}
+
 
 h1{
     font-family: 'PixelBig1', sans-serif;
@@ -38,15 +44,10 @@ h2 {
     text-align: center;
 }
 
-/* h1:hover{
-    opacity: 0.5;
-} */
-
-/* cursor hovers, text fades */
-
 .main-buttons{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    max-width: 260px;
     gap: 50px;
     align-items: center;
 }
@@ -116,6 +117,12 @@ h2 {
 
 }
 
+.toolboard {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+}
+
 #drawMode, #rainbow, #eraser, #clear, #addLines, #guessDraw {
   /* Remove default button styling */
   background: none;
@@ -141,6 +148,11 @@ h2 {
   position: relative;
   width: 80px;
   aspect-ratio: 1 / 1;
+}
+
+.guess-button {
+  flex-direction: column;
+  padding-bottom: 20px;
 }
 
 /* label styling */
@@ -184,8 +196,9 @@ h2 {
     border: solid 2px rgb(255, 255, 255);
     background-color: rgb(253, 214, 244);
     box-shadow: 0 8px 16px rgba(123, 28, 115, 0.627);
-    border-radius: 5%;
-    margin-top: 50px;
+    border-radius: 10px;
+    padding: 0px 50px 50px 50px;
+    /* margin-top: 50px; */
 }
 
 .canvas {
@@ -194,7 +207,7 @@ h2 {
     border: solid 2px #32232375;
     width: 600px;
     height: 600px;
-    margin: 0px 50px 50px 50px;
+    /* margin: 0px 50px 50px 50px; */
     gap:0;
     background-color: white;
     /* background-image: url(images/sketchpaper.jpg); */
@@ -208,18 +221,31 @@ h2 {
 }
 
 .container {
-    display: flex;
-    justify-content: center;
-}
+  margin-top: 50px;
+  display: grid;
 
+  grid-template-columns: 
+    minmax(220px, 260px)   /* AI section */
+    auto                  /* Canvas */
+    minmax(220px, 260px); /* Toolboard */
+
+  gap: 50px;
+
+  justify-content: center; /* centers entire 3-column block */
+  align-items: start;
+
+  width: 100%;
+}
+/* 
 .options {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     padding: 1px;
-    margin-left: 50px;
-}
+    /* margin-left: 50px; */
+
+
 
 .square {
   display: flex;
@@ -238,14 +264,19 @@ h2 {
   border: 1px solid rgb(219, 219, 219);
 }
 
-.ai-container {
+.ai-container,
+.options {
+  width: 100%;
+  max-width: 260px;
+
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-  margin-right: 50px;
-  /* margin-top: 100px; */
+  gap: 20px;
+
+  text-align: center;
 }
+
 
 .fruit-images {
   display: flex;
@@ -257,7 +288,22 @@ h2 {
   width: 50px;
 }
 
+#save {
+  cursor: pointer;
+  padding: 10px;
+  border: rgb(37, 28, 28) solid 1px;
+  border-radius: 15px;
+  text-align: center; 
+  font-family: monospace; 
+  background-color: cornsilk;
+}
 
+#save:hover {
+  background-color: rgb(145, 75, 130);
+  color: antiquewhite;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+  
+}
 
 
 
